--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -3,10 +3,10 @@
     <button class="btn btn-outline-primary logout" (click)="logout()" >Logout</button>
 </div>
 <div class="user-profile">
-    <h1 class="display-4" >Welcome , {{people.fname+" "+people.lname}} </h1>
+    <h1 class="display-4" >Welcome , {{people.uname}} </h1>
     <div class="info">
            <p>Here is your profile information.</p>  
-            <ul>{{people.fname+" "+people.lname}}</ul>
+            <ul>{{people.uname}}</ul>
             <ul>{{people.dob}}</ul>
             <ul>{{people.email}}</ul>
             <ul>{{people.phno}}</ul>
