--- a/src/app/components/loan-details/loan-details.component.html
+++ b/src/app/components/loan-details/loan-details.component.html
@@ -1,4 +1,4 @@
-<form>
+<form [formGroup]="forms" >
     <p>Choose a loan type from:</p>
     <ol>
         <li>home</li>
@@ -8,7 +8,7 @@
     </ol>
     <div class="form-group col-sm-3">
         <label for="loanType">Loan type</label>
-        <input type="text" class="form-control" [formControl] = "LoanTypeValue" name="loanType" >
+        <input type="text" class="form-control" formControlName = "LoanTypeValue" name="loanType" >
     </div>
     <button class="btn btn-secondary confirm" (click)="onConfirm()" > Confirm </button>
 </form>
@@ -36,14 +36,14 @@
     </div>
 </div>
 <div class="user-input">
-    <form>
+    <form [formGroup]="forms">
         <div class="form-group">
-          <label for="loanAmount">Loan Amount</label>
-          <input type="number" class="form-control col-sm-3" [formControl] = "loanAmount" >
+          <label for="loanAmount">Loan Amount (In Rupees)</label>
+          <input type="number" class="form-control col-sm-3" formControlName = "loanAmount" >
         </div>
         <div class="form-group">
-          <label for="loanDuration">Loan Tenure</label>
-          <input type="number" class="form-control col-sm-3" [formControl] = "loanDuration" >
+          <label for="loanDuration">Loan Tenure (In years)</label>
+          <input type="number" class="form-control col-sm-3" formControlName = "loanDuration" >
         </div>
         <button type="submit" (click)="onSubmit()" class="btn btn-primary">Submit</button>
       </form>
