final front end commit

--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -45,7 +45,7 @@
                       Date of birth is required!
                     </div>
                     <div *ngIf="forms.get('dob')?.errors?.['pattern']">
-                      Date of birth shiuld be in the format of dd/mm/yyyy!
+                      Date of birth should be in the format of dd/mm/yyyy!
                     </div>
                   </div>
                   <div class="col-md-6 mb-4 d-flex align-items-center">
